# scutils

./: .gitignore  README.md  de_example.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  lint.yml
data/perturbation_compilation/: perturbation_datasets_master.csv  perturbation_datasets_master.parquet  perturbation_datasets_sc_human_cl_sm.csv  perturbation_datasets_sc_human_cl_sm.parquet
docs/: Makefile  changelog.md  conf.py  deployment.md  index.rst  installation.md  quickstart.md
docs/_static/: custom.css
docs/api/: plotting.rst  preprocessing.rst  tools.rst
docs/user_guide/: getting_started.rst  plotting.rst  preprocessing.rst  tools.rst
notebooks/: atlas_de_analysis.ipynb  de_overlap_enrichment.ipynb  differential_expression.ipynb  perturbation_data_compilation.ipynb
notebooks/disease_subclusters/: 01_detection.ipynb  01_disease_subcluster_detection.ipynb  01b_subcluster_cards.ipynb  02_consensus_gene_list.ipynb  02_differential_expression.ipynb  02_subcluster_cards.ipynb  03_combined_report.ipynb  03_consensus_gene_list.ipynb  03_functional_enrichment.ipynb  04_consensus_gene_list.ipynb  04_gene_scoring.ipynb  05_gene_scoring.ipynb  test_pipeline.py
src/scutils/: __init__.py
tests/: conftest.py
tests/plotting/: test_barplots.py  test_boxplots.py  test_density_plotting.py  test_dotplots.py  test_embeddings.py  test_functional.py  test_heatmaps.py  test_sankey.py  test_upset.py  test_volcano_plot.py
tests/preprocessing/: test_concatenation.py  test_pseudobulk.py
tests/tools/: test_clustering.py  (+4 more)
(+25 files in other folders)
